--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             color: var(--text-color, #fff);
         }
         .powered-by span {
-            color: var(--gray, #999);
+            color: var(--text-color, #fff);
         }
         .powered-by strong {
-            color: #00f2c3;
-            font-weight: 600;
+            color: #d5d5d5;
+            font-weight: 900;
         }
         .powered-by img {
+            width: 50px;
             filter: drop-shadow(0 0 4px rgba(0, 242, 195, 0.3));
         }
     </style>
