style: adjust logo text and image sizes in index.html
Update company name from "Onchain" to "Bills-Onchain" and adjust various image dimensions for better visual consistency. Modified powered-by logo height and logo image width to improve layout proportions.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             font-weight: 900;
         }
         .powered-by img {
-            width: 50px;
+            width: 30px;
             filter: drop-shadow(0 0 4px rgba(0, 242, 195, 0.3));
         }
     </style>
@@ -46,7 +46,7 @@
         <header>
             <div class="logo">
                 <img src="index-files/imgs/onchain-small.png" alt="Onchain Logo">
-                <span class="logo-text">Onchain</span>
+                <span class="logo-text">Bills-Onchain</span>
             </div>
 
             <nav class="desktop-nav">
@@ -87,7 +87,7 @@
             <p>Buy Airtime, Pay Bills, Trade Assets—All Secure and Fast</p>
             <div class="powered-by" style="margin-top: 20px; width: fit-content; margin-left: auto; margin-right: auto;">
                 <span>Powered by</span>
-                <img src="index-files/imgs/asset3d.png" alt="Assetchain" style="height: 20px; margin: 0 8px; vertical-align: middle; filter: drop-shadow(0 0 4px rgba(0, 242, 195, 0.3));">
+                <img src="index-files/imgs/asset3d.png" alt="Assetchain" style="height: 50px; margin: 0 8px; vertical-align: middle; filter: drop-shadow(0 0 4px rgba(0, 242, 195, 0.3));">
                 <strong>Assetchain</strong>
             </div>
             <div class="cta-buttons">
