feat: Implement core DEX application page with UI, styling, and wallet connection logic.

--- a/dex/index.html
+++ b/dex/index.html
@@ -1678,8 +1678,8 @@
     // DOM utility functions
     const $ = (s) => document.querySelector(s);
     const $$ = (s) => document.querySelectorAll(s);
-    const apiBase = '/onchain_multichain/api';
-    // const apiBase = '/api';
+    // const apiBase = '/onchain_multichain/api';
+    const apiBase = '/api';
 
     const CHAINS = {
       assetchain: {
